# geometric-data-processing-hw2

./: .flake8  .gitignore  makefile  pyproject.toml  run.py
assignment2/: __init__.py
assignment2/planes/: distance_to_planes.py  test.py
assignment2/rotation/: axis_of_rotation.py  test.py
assignment2/smoothing/: explicit_laplace_smoothing.py  test.py
data/: meshes.py  primitives.py
